--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,5 +1,5 @@
 body {
-    background: white url("images/background.jpg") no-repeat right bottom;
+    background: white no-repeat right bottom;
 }
 
 li a {
